# maybe-tvmaze-client

./: Cargo.toml
src/: client.rs  error.rs  lib.rs
src/models/: episode.rs  mod.rs  season.rs  show.rs  show_main_info.rs
