[package]
name = "maybe-tvmaze-client"
version = "0.2.0"
edition = "2021"
description = "A sync/async TvMaze api client."

[dependencies]
thiserror = "1.0.61"
maybe-async = "0.2.10"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

log = {version = "0.4.21", optional = true}
serde_derive = "1.0.203"


[dependencies.maybe-http-client]
path = "../maybe-http-client"
default-features = false
features = []

[dev-dependencies]
async-std = { version = "1.12.0", features = ["async-attributes", "attributes", "tokio1"] }

[features]

default = ["async"]
async = ["__async", "maybe-http-client/async"]
sync = ["__sync", "maybe-http-client/sync"]

log = ["dep:log", "maybe-http-client/log"]

__async = ["maybe-async/default"]
__sync = ["maybe-async/is_sync"]